--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,11 +11,11 @@
   - Home page only: only shows on the home page
 {%- endcomment -%}
 <section data-section-id="{{ section.id }}" data-section-type="header">
-
+  
+  <!-- Navbar Snippet with the HTML Code -->
   <header>
     {% include 'navbar' %}
   </header>
-  
 
 </section>
 
