--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -16,8 +16,8 @@
                                 <p>Respuesta por aquí</p>
                                 <p class="item-intro text-muted">4. ¿Pregunta aquí?</p>
                                 <p>Respuesta por aquí</p>
-                                <ul class="list-unstyled"></ul><button class="btn btn-primary" data-dismiss="modal"
-                                    type="button"><i class="fa fa-times"></i><span>Cerrar</span></button>
+                                <ul class="list-unstyled"></ul><br/>
+                                <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp; Cerrar</span></button>
                             </div>
                         </div>
                     </div>
@@ -43,9 +43,8 @@
                                     blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi
                                     sunt officia
                                     expedita beatae
-                                    cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><button
-                                    class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                        class="fa fa-check"></i><span>&nbsp;Lo comprendo</span></button>
+                                    cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><br/>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-check"></i><span> Lo comprendo</span></button>
                             </div>
                         </div>
                     </div>
