--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
 
@@ -84,19 +83,19 @@
     
     <!-- Index's Dynamic UI Content, to modify, head to shopify's customization of your store and edit it from the web app -->
     <main style="margin-top:120px;">
-      
-      <!-- Container class (non-fluid) for rows and columns -->
       <div class="container">
         {{ content_for_layout }}
       </div>
-
     </main>
+
+    <!-- Bootstrap Footer with social media icons -->
+    {% section 'footer' %}
     
     <!-- The (free shipping) Small Banner Section -->
     {% section 'small-banner' %}
 
-    <!-- Bootstrap Footer -->
-    {% section 'footer' %}
+    <!-- Bootstrap Footer with secure payments' photos -->
+    {% section 'unmodifiable-footer' %}
 
     <!-- Javascript Files -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
