--- a/sections/small-banner.liquid
+++ b/sections/small-banner.liquid
@@ -1,4 +1,4 @@
-<section style="margin-top: 72px; margin-bottom: 50px;">
+<section style="margin-bottom: 25px;">
   <div class="container">
     <div class="row">
       <div class="col-md-12" style="text-align: center;">
