Added bootstrap slider

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,7 +54,7 @@
 
     {% include 'social-meta-tags' %}
 
-    <!-- Default Themekit CSS ? -->
+    <!-- Default Themekit CSS ??? -->
     {% include 'css-variables' %}
 
     <!-- Shop money Format and Cart -->
