--- a/snippets/navbar.liquid
+++ b/snippets/navbar.liquid
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white">
+<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white text-center">
   <div class="container"><a class="navbar-brand logo" href="/" style="font-family: 'Source Serif Pro', serif;">PoolMex</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav ml-auto">
