--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -8,25 +8,24 @@
   Theme Store optional settings
   - Heading: title of the featured collection section
 {%- endcomment -%}
+
 <section class="featured-collection">
-  {% if section.settings.title != blank %}
-    <h2 class="featured-collection__title">{{ section.settings.title | escape }}</h2>
-  {% endif %}
 
   {%- assign collection = collections[section.settings.collection] -%}
 
+  <!-- Products >
   {% for product in collection.products limit: 6 %}
     <a href="{{ product.url | within: collection }}" class="featured-collection-item">
       {% if product.featured_image != blank %}
         <div class="featured-collection__image">
           {% include 'responsive-image' with
-            image: product.featured_image,
-            max_width: 480,
-            max_height: 480
-          %}
+                  image: product.featured_image,
+                  max_width: 480,
+                  max_height: 480
+                %}
         </div>
       {% endif %}
-
+    
       <p>{{ product.title | escape }}</p>
       <span>
         {% if product.compare_at_price > product.price %}
@@ -47,18 +46,97 @@
         {% endif %}
       </span>
     </a>
-  {% else %}
-    {% for i in (1..6) %}
-      <a href="#" class="featured-collection-item">
-        {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
-        {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
-
-        <p>{{ 'homepage.onboarding.product_title' | t }}</p>
-        <p>{{ 1999 | money }}</p>
-      </a>
-    {% endfor %}
+    {% else %}
+      {% for i in (1..6) %}
+        <a href="#" class="featured-collection-item">
+          {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+          {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
+        
+          <p>{{ 'homepage.onboarding.product_title' | t }}</p>
+          <p>{{ 1999 | money }}</p>
+        </a>
+      {% endfor %}
   {% endfor %}
-</section>
+-->
+  
+  {% if product.featured_image != blank %}
+  <div class="featured-collection__image">
+    {% include 'responsive-image' with
+        image: product.featured_image,
+        max_width: 480,
+        max_height: 480
+      %}
+  </div>
+  {% endif %}
+
+
+<!-- Catalog -->
+<div class="page catalog-page">
+  <section class="clean-block clean-catalog dark">
+    <div class="container">
+
+      <!-- Title -->
+      {% if section.settings.title != blank %}
+        <h2 class="featured-collection__title">{{ section.settings.title | escape }}</h2>
+      {% endif %}
+
+      <!-- Products -->
+      <div class="content">
+        <div class="row no-gutters">
+
+          {% for product in collection.products limit: 6 %}
+
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 offset-sm-1 offset-md-1 offset-lg-1" style="margin-top: 20px; margin-bottom: 40px;">
+              <div class="clean-product-item">
+                
+                <!-- Product Image -->
+                <div class="image">
+                  <a href="{{ product.url | within: collection }}">
+                    <img class="img-fluid d-block mx-auto" src="{{ product.featured_image | img_url: '1160x' }}" alt="{{ product.featured_image.alt | escape }}">
+                  </a>
+                </div>
+                
+                <!-- Product Title -->
+                <div class="product-name text-center" style="color: rgb(0,0,0);" class="anone">
+                  <a href="{{ product.url | within: collection }}">
+                    {{ product.title | escape }}
+                  </a>
+                </div>
+
+                <!-- Product Dimensions -->
+                <div class="product-name text-center">
+                  <a href="{{ product.url | within: collection }}" style="color: rgb(143, 140, 140); font-size: 14px;" class="anone">
+                    2.95m x 1.70m x 61cm
+                  </a>
+                </div>
+
+                <!-- Price & Buy Button-->
+                <div class="about">
+                  <div class="price" style="float:left;">
+                    <h3>
+                      {{ product.price | money }}
+                    </h3>
+                  </div>
+
+                  <div class="price" style="float:right;">
+                    <button class="btn btn-primary" type="button">
+                      <i class="fas fa-shopping-cart"></i>
+                    </button>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+          {% endfor %}
+          
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+
 
 {% schema %}
   {
