--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,101 +1,46 @@
 {%- comment -%}
-  This is a required section for the Shopify Theme Store.
-  It is available in the "Featured Collection" section in the theme editor.
+This is a required section for the Shopify Theme Store.
+It is available in the "Featured Collection" section in the theme editor.
 
-  Theme Store required settings
-  - Collection
+Theme Store required settings
+- Collection
 
-  Theme Store optional settings
-  - Heading: title of the featured collection section
+Theme Store optional settings
+- Heading: title of the featured collection section
 {%- endcomment -%}
 
 <section class="featured-collection">
 
   {%- assign collection = collections[section.settings.collection] -%}
 
-  <!-- Products >
-  {% for product in collection.products limit: 6 %}
-    <a href="{{ product.url | within: collection }}" class="featured-collection-item">
-      {% if product.featured_image != blank %}
-        <div class="featured-collection__image">
-          {% include 'responsive-image' with
-                  image: product.featured_image,
-                  max_width: 480,
-                  max_height: 480
-                %}
-        </div>
-      {% endif %}
-    
-      <p>{{ product.title | escape }}</p>
-      <span>
-        {% if product.compare_at_price > product.price %}
-          {% if product.price_varies %}
-            {%- assign sale_price = product.price | money -%}
-            {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
-          {% else %}
-            {{ 'products.product.on_sale' | t }}
-            {{ product.price | money }}
-          {% endif %}
-        {% else %}
-          {% if product.price_varies %}
-            {%- assign price = product.price | money -%}
-            {{ 'products.product.from_text_html' | t: price: price }}
-          {% else %}
-            {{ product.price | money }}
-          {% endif %}
-        {% endif %}
-      </span>
-    </a>
-    {% else %}
-      {% for i in (1..6) %}
-        <a href="#" class="featured-collection-item">
-          {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
-          {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
-        
-          <p>{{ 'homepage.onboarding.product_title' | t }}</p>
-          <p>{{ 1999 | money }}</p>
-        </a>
-      {% endfor %}
-  {% endfor %}
--->
-  
-  {% if product.featured_image != blank %}
-  <div class="featured-collection__image">
-    {% include 'responsive-image' with
-        image: product.featured_image,
-        max_width: 480,
-        max_height: 480
-      %}
-  </div>
-  {% endif %}
+  <!-- Catalog -->
+  <div class="page catalog-page">
+    <section class="clean-block clean-catalog dark">
+      <div class="container">
 
-
-<!-- Catalog -->
-<div class="page catalog-page">
-  <section class="clean-block clean-catalog dark">
-    <div class="container">
-
-      <!-- Title -->
-      {% if section.settings.title != blank %}
+        <!-- Title -->
+        {% if section.settings.title != blank %}
         <h2 class="featured-collection__title">{{ section.settings.title | escape }}</h2>
-      {% endif %}
+        {% endif %}
 
-      <!-- Products -->
-      <div class="content">
-        <div class="row no-gutters">
+        <!-- Products -->
+        <div class="content">
+          <div class="row no-gutters">
 
-          {% for product in collection.products limit: 6 %}
+            {% for product in collection.products limit: 6 %}
 
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 offset-sm-1 offset-md-1 offset-lg-1" style="margin-top: 20px; margin-bottom: 40px;">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 offset-sm-1 offset-md-1 offset-lg-1"
+              style="margin-top: 20px; margin-bottom: 40px;">
               <div class="clean-product-item">
-                
+
                 <!-- Product Image -->
                 <div class="image">
                   <a href="{{ product.url | within: collection }}">
-                    <img class="img-fluid d-block mx-auto" src="{{ product.featured_image | img_url: '1160x' }}" alt="{{ product.featured_image.alt | escape }}">
+                    <img class="img-fluid d-block mx-auto" src="{{ product.featured_image | img_url: '1160x' }}"
+                      alt="{{ product.featured_image.alt | escape }}">
                   </a>
                 </div>
-                
+
                 <!-- Product Title -->
                 <div class="product-name text-center" style="color: rgb(0,0,0);" class="anone">
                   <a href="{{ product.url | within: collection }}">
@@ -105,7 +50,8 @@
 
                 <!-- Product Dimensions -->
                 <div class="product-name text-center">
-                  <a href="{{ product.url | within: collection }}" style="color: rgb(143, 140, 140); font-size: 14px;" class="anone">
+                  <a href="{{ product.url | within: collection }}" style="color: rgb(143, 140, 140); font-size: 14px;"
+                    class="anone">
                     2.95m x 1.70m x 61cm
                   </a>
                 </div>
@@ -128,15 +74,13 @@
               </div>
             </div>
 
-          {% endfor %}
-          
+            {% endfor %}
+
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-</div>
-
-
+    </section>
+  </div>
 
 {% schema %}
   {
