--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -1,50 +1,88 @@
 <section data-section-id="{{ section.id }}" data-section-type="product">
   
-  <div class="container mt-4">
+  <div class="container-fluid">
     <div class="row">
-        <div class="col-md-7">
 
+        <!-- Start: Pretty Carousel Fade + TouchSwipe -->
+        <div class="col-md-7">
           {%- assign current_variant = product.selected_or_first_available_variant -%}
           {%- assign featured_image = current_variant.featured_image | default: product.featured_image -%}
-        
-            <div class="product-slider">
-              {% if product.images.size > 1 %}
-                  {% for image in product.images %}
-                    <div>
-                      <a href="{{ image.src | img_url: '480x480' }}" data-thumbnail-id="{{ image.id }}" data-product-single-thumbnail{% if featured_image == image %} aria-current="true"{% endif %}>
-                        <img class="img-fluid" src="{{ image.src | img_url: '800x600', crop:'center' }}" alt="{{ image.alt | escape }}">
-                      </a>
-                    </div>
-                  {% endfor %}
-              {% endif %}
-            </div>
-
-            <div class="product-slider-nav mt-4">
+          
+          <div class="carousel slide carousel-fade" data-ride="carousel" id="carousel1">
+            <div class="carousel-inner" role="listbox">
+                
                 {% if product.images.size > 1 %}
-                    {% for image in product.images %}
-                        <img class="img-fluid px-3" width="50" src="{{ image.src | img_url: '200x150', crop:'center' }}" alt="{{ image.alt | escape }}">
-                    {% endfor %}
-                {% endif %} 
+                  {% for image in product.images limit:3 %}
+
+                    <!-- First time through the for, you must set the first carousel item as active -->
+                    {% if forloop.first == true %}
+                      <div class="carousel-item active">
+                        <img class="w-100 d-block" src="{{ image.src | img_url: '480x480' }}" alt="{{ image.alt | escape }}">
+                        <div class="carousel-caption">
+                          <h3>Obnoxiae retinere </h3>
+                          <p>Populatam populatam expresse ei ad </p>
+                        </div>
+                      </div>
+
+                    <!-- After that, you must set the other carousel items without the active class-->
+                    {% else %}
+                      <div class="carousel-item">
+                        <img class="w-100 d-block" src="{{ image.src | img_url: '480x480' }}" alt="{{ image.alt | escape }}">
+                        <div class="carousel-caption">
+                          <h3>Obnoxiae retinere </h3>
+                          <p>Populatam populatam expresse ei ad </p>
+                        </div>
+                      </div>
+                    {% endif %}
+                    
+                  {% endfor %}
+                {% endif %}
+
             </div>
 
-        </div> <!-- / col -->
+            <!-- Arrow Buttons -->
+            <div style="color:black">
+                <!-- Previous -->
+                <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev"><i class="icon-arrow-left" style="color:black"></i><span class="sr-only">Previous</span></a>
+                
+                <!-- Next -->
+                <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next"><i class="icon-arrow-right" style="color:black"></i><span class="sr-only">Next</span></a>
+            </div>
 
+            <!-- Lower Carousel Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel1" data-slide-to="0" class="active" style="color:black"></li>
+                <li data-target="#carousel1" data-slide-to="1" style="color:black"></li>
+                <li data-target="#carousel1" data-slide-to="2" style="color:black"></li>
+            </ol>
+          </div>
+        </div>
+        <!-- End: Pretty Carousel Fade + TouchSwipe -->
+
+        <!-- Start: Product's Information/Content -->
         <div class="col-md-5">
-                  
+            
+            <!-- Title -->
             <h1>{{ product.title }}</h1>
            
-            <div data-price-wrapper class="my-2">
+            <!-- Price Comparison -->
+            <div data-price-wrapper class="my-2 text-left">
+              
+                <!-- Current Price -->
                 <span data-product-price>
                   {{ current_variant.price | money }}
                 </span>
           
+                <!-- Strikethrough Price -->
                 {% if product.compare_at_price_max > product.price %}
-                  <span class="visually-hidden" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
-                  <s data-compare-price>
-                    {% if current_variant.compare_at_price > current_variant.price %}
-                      {{ current_variant.compare_at_price | money }}
-                    {% endif %}
-                  </s>
+                  <p class="float:right;">
+                    <span class="visually-hidden" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
+                    <s data-compare-price>
+                      {% if current_variant.compare_at_price > current_variant.price %}
+                        {{ current_variant.compare_at_price | money }}
+                      {% endif %}
+                    </s>
+                  </p>
                 {% endif %}
             </div>
                    
@@ -61,6 +99,7 @@
         </div> <!-- / col -->
     </div> <!-- / row -->
   </div>
+
 
 </section>
 
